objects/ASI_TnE_Employee_Budget__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Channel__c</fullName>
        <label>Channel (Upload)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Dept__c</fullName>
        <label>Dept. (Upload)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_No__c</fullName>
        <label>Employee No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Entity__c</fullName>
        <label>Entity (Upload)</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1011</fullName>
                </value>
                <value>
                    <fullName>FY1112</fullName>
                </value>
                <value>
                    <fullName>FY1213</fullName>
                </value>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_P10_Amount__c</fullName>
        <label>P10 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_P11_Amount__c</fullName>
        <label>P11 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_P12_Amount__c</fullName>
        <label>P12 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employee Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Fiscal_Year__c</columns>
        <columns>ASI_TnE_Employee_No__c</columns>
        <columns>ASI_TnE_P1_Amount__c</columns>
        <columns>ASI_TnE_P2_Amount__c</columns>
        <columns>ASI_TnE_P3_Amount__c</columns>
        <columns>ASI_TnE_P4_Amount__c</columns>
        <columns>ASI_TnE_P5_Amount__c</columns>
        <columns>ASI_TnE_P6_Amount__c</columns>
        <columns>ASI_TnE_P7_Amount__c</columns>
        <columns>ASI_TnE_P8_Amount__c</columns>
        <columns>ASI_TnE_P9_Amount__c</columns>
        <columns>ASI_TnE_P10_Amount__c</columns>
        <columns>ASI_TnE_P11_Amount__c</columns>
        <columns>ASI_TnE_P12_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TnE_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1415</value>
        </filters>
        <label>FY1415 Employee Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Fiscal_Year__c</columns>
        <columns>ASI_TnE_Employee_No__c</columns>
        <columns>ASI_TnE_P1_Amount__c</columns>
        <columns>ASI_TnE_P2_Amount__c</columns>
        <columns>ASI_TnE_P3_Amount__c</columns>
        <columns>ASI_TnE_P4_Amount__c</columns>
        <columns>ASI_TnE_P5_Amount__c</columns>
        <columns>ASI_TnE_P6_Amount__c</columns>
        <columns>ASI_TnE_P7_Amount__c</columns>
        <columns>ASI_TnE_P8_Amount__c</columns>
        <columns>ASI_TnE_P9_Amount__c</columns>
        <columns>ASI_TnE_P10_Amount__c</columns>
        <columns>ASI_TnE_P11_Amount__c</columns>
        <columns>ASI_TnE_P12_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY1516_Employee_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Fiscal_Year__c</columns>
        <columns>ASI_TnE_Employee_No__c</columns>
        <columns>ASI_TnE_P1_Amount__c</columns>
        <columns>ASI_TnE_P2_Amount__c</columns>
        <columns>ASI_TnE_P3_Amount__c</columns>
        <columns>ASI_TnE_P4_Amount__c</columns>
        <columns>ASI_TnE_P5_Amount__c</columns>
        <columns>ASI_TnE_P6_Amount__c</columns>
        <columns>ASI_TnE_P7_Amount__c</columns>
        <columns>ASI_TnE_P8_Amount__c</columns>
        <columns>ASI_TnE_P9_Amount__c</columns>
        <columns>ASI_TnE_P10_Amount__c</columns>
        <columns>ASI_TnE_P11_Amount__c</columns>
        <columns>ASI_TnE_P12_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TnE_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1516</value>
        </filters>
        <label>FY1516 Employee Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FY1617_Employee_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Fiscal_Year__c</columns>
        <columns>ASI_TnE_Employee_No__c</columns>
        <columns>ASI_TnE_P1_Amount__c</columns>
        <columns>ASI_TnE_P2_Amount__c</columns>
        <columns>ASI_TnE_P3_Amount__c</columns>
        <columns>ASI_TnE_P4_Amount__c</columns>
        <columns>ASI_TnE_P5_Amount__c</columns>
        <columns>ASI_TnE_P6_Amount__c</columns>
        <columns>ASI_TnE_P7_Amount__c</columns>
        <columns>ASI_TnE_P8_Amount__c</columns>
        <columns>ASI_TnE_P9_Amount__c</columns>
        <columns>ASI_TnE_P10_Amount__c</columns>
        <columns>ASI_TnE_P11_Amount__c</columns>
        <columns>ASI_TnE_P12_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TnE_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1617</value>
        </filters>
        <label>FY1617 Employee Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Budget No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Budgets</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KR_Employee_Budget</fullName>
        <active>true</active>
        <label>KR Employee Budget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>